--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: black;
+  background: #E9E8D5;
 }
 
 .container {
@@ -13,6 +13,8 @@ body {
 
 header {
   width: 100%;
+  background-color: #1C1C1C; 
+  text-decoration-color: #FFFFFC
 }
 
 nav {
