Updated site info

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,11 +14,11 @@ html {
   width: 100%;
   height: 100%;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
+h1, Amie Shea
+h2, Contact Info
+h3, Work
+h4, Other Projects
+h5, 
 h6 {
   margin: 0 0 35px;
   text-transform: uppercase;
